<resources>
    <string name="app_name">Aplikacja z królikami</string>
    <string name="title_home">Strona główna</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="age">Wiek: </string>
    <string name="age_label">Wiek</string>
    <string name="rabbit_list_title">Lista królików i miotów</string>
    <string name="open">Otwórz</string>
    <string name="close">Zamknij</string>
    <string name="rabbit_picture">Zdjęcie Królika</string>
    <string name="rabbit_details">Szczegóły królika</string>
    <string name="litter_details">Szczegóły miotu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_list">Dodaj</string>
    <string name="add_rabbit">Dodaj królika</string>
    <string name="add_litter">Dodaj miot</string>
    <string name="rabbit_name_label">Imię:</string>
    <string name="litter_name_label">Nazwa:</string>
    <string name="rabbit_placeholder">Królik</string>
    <string name="birth_date_label">Data urodzenia:</string>
    <string name="birth_date">Data wykocenia</string>
    <string name="female">Samica</string>
    <string name="male">Samiec</string>
    <string name="save">Zapisz</string>
    <string name="litter_size">Wielkość miotu:</string>
    <string name="mother">Matka</string>
    <string name="father">Ojciec</string>
    <string name="pick">Wybierz</string>
    <string name="ear_numbers">Numery LU/PU:</string>
    <string name="unknown">Nieznane</string>
    <string name="sex_label">Płeć:</string>
    <string name="delete">Usuń</string>
    <string name="edit">Edytuj</string>
    <string name="cancel">Anuluj</string>
    <string name="ok">OK</string>
    <string name="alert">Uwaga</string>
    <string name="confirm_delete_vaccine_message">Czy na pewno chcesz usunąć szczeptionkę? Ta operacja jest nieodwracalna!</string>
    <string name="confirm_delete_rabbit_message">Czy na pewno chcesz usunąć królika? Ta operacja jest nieodwracalna!</string>
    <string name="confirm_delete_litter_message">Czy na pewno chcesz usunąć miot? Ta operacja jest nieodwracalna!</string>
    <string name="confirm_delete_matting_message">Czy na pewno chcesz usunąć pokrycie? Ta operacja jest nieodwracalna!</string>
    <string name="confirm_archive_matting_message">Czy na pewno chcesz zaarchiwizować pokrycie? Nie będzie ono dłużej wyświetlanie na liście!</string>
    <string name="litter_placeholder">Króliczaki</string>
    <string name="error_empty">To pole nie może być puste</string>
    <string name="gender_empty">Płeć musi być wybrana!</string>
    <string name="add_rabbit_to_litter">Dodaj królika do miotu</string>
    <string name="belongs_to_litter">Należy do miotu:</string>
    <string name="illegal_parent_change">Zmiana rodzica niemożliwa podczas dodawania do miotu.</string>
    <string name="date_change_illegal">Zmiana daty urodzenia niemożliwa podczas dodawania do miotu.</string>
    <string name="cannot_add_more_rabbits_to_litter">Nie można dodać wiecej królików niż wynosi rozmiar miotu</string>
    <string name="rabbits_belonging_to_litter">Króliki należące do miotu:</string>
    <string name="litter_edit_warn_message">Uwaga! Zmiana daty urodzenia lub rodziców miotu spowoduje taką samą zmianę we wszystkich królikach należących do tego miotu!</string>
    <string name="vaccine">Szczepionka:</string>
    <string name="vaccination_date">Data szczepienia:</string>
    <string name="dose">Dawka:</string>
    <string name="vaccine_details">Szczegóły szczepionki</string>
    <string name="vaccines">Szczepionki</string>
    <string name="vaccine_name">Nazwa szczepionki: </string>
    <string name="vaccine_description">Opis szczepionki. W jakim wieku powinna być podana, na co działa, jakie jest dawkowanie?</string>
    <string name="your_description">Twój opis (kliknij żeby zmienić)</string>
    <string name="edit_vaccine">Edytuj szczepionkę</string>
    <string name="add_vaccination">Dodaj szczepienie</string>
    <string name="vaccinate">Zaszczep</string>
    <string name="vaccinations_list">Lista podanych szczepionek</string>
    <string name="and">i</string>
    <string name="mating_mate">Data krycia:</string>
    <string name="estimated_birth_date">Spodziewana data wykocenia:</string>
    <string name="unknown_numbers">Brak numerów</string>
    <string name="matings">Krycia</string>
    <string name="add_mating">Dodaj krycie</string>
    <string name="date">Data:</string>
    <string name="mating_date">Data pokrycia:</string>
    <string name="mating_date_label">Data pokrycia</string>
    <string name="born_litter">Urodzony miot</string>
    <string name="rabbits_and_litters">Króliki i mioty</string>
    <string name="mating_details">Szczegóły krycia</string>
    <string name="end">Zakończ</string>
    <string name="overtime_for_mating_consider_archiving">Minęło ponad 45 dni od pokrycia. Zarchiwizuj pokrycie, aby je ukryć lub dodaj miot, jeśli zakończyło się owocnie.</string>
    <string name="archived">Zarchiwizowane!</string>
    <string name="archived_label">Zarchiwizowane</string>
    <string name="archive">Archiwizuj</string>
    <string name="add">dodaj</string>
    <string name="matings_list">Lista pokryć</string>
    <string name="sicknesses">Choroby</string>
    <string name="sickness_name">Nazwa choroby:</string>
    <string name="symptoms">Objawy:</string>
    <string name="treatment">Leczenie:</string>
    <string name="edit_sickness">Edytuj chorobę</string>
    <string name="confirm_delete_sickness_message">Czy na pewno chcesz usunąć pokrycie? Ta operacja jest nieodwracalna!</string>
    <string name="add_sickness">Dodaj chorobę</string>
    <string name="sickness_start_date">Data początku choroby:</string>
    <string name="sickness_end_date">Data końca choroby:</string>
    <string name="additional_description">Dodatkowy opis:</string>
    <string name="sicknesses_list">Lista chorób</string>
    <string name="cannot_change_remove_and_add_again">Nie można zmienić!! Usuń i utwórz ponownie</string>
    <string name="confirm_delete_sick_message">Czy na pewno chcesz usunąć? Ta operacja jest nieodwracalna!</string>
    <string name="sick_list">Lista chorych</string>
    <string name="next_dose_date">Data kolejnej dawki:</string>
    <string name="already_given_doses">Podane dawki:</string>
    <string name="_1">1</string>
    <string name="vaccinate_details">Szczegóły szczepienia</string>
    <string name="vaccinated_list">Lista zaszczepionych</string>
    <string name="cage_number">Numer klatki:</string>
    <string name="death_date">Data śmierci:</string>
    <string name="dead">Martwy</string>
    <string name="mark_as_dead">Oznacz jako martwego</string>
    <string name="settings">Ustawienia</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_sign_in">Logowanie nie powiodło się</string>
    <string name="app_icon_desc">Ikona aplikacji</string>
    <string name="sign_in_with_google_button">Zaloguj się przez Google</string>
    <string name="error_incorrect_auth">Logowanie nieudane</string>
    <string name="error_connection">Brak połączenia, spróbuj ponownie za chwilę</string>
    <string name="error_no_user">Użytkownik nie istnieje</string>
    <string name="error_non_unique_login">Login niedostępny</string>
    <string name="log_out">Wyloguj się</string>
    <string name="internet_error">Brak internetu, dane mogą być nieaktualne. Edycja wyłączona!</string>
    <string name="no_lock">Edycja zablokowana. Ktoś inny używa aplikacji!</string>
    <string name="non_editable">Edycja wyłączona. Brak internetu lub uprawnień!</string>
    <string name="filter">Filtruj:</string>
    <string name="alive">Żywy</string>
    <string name="rabbit">Królik</string>
    <string name="litter">Miot</string>
    <string name="sort">Sortuj:</string>
    <string name="name">Imię</string>
    <string name="name_label">Nazwa</string>
    <string name="numbers">Numery</string>
    <string name="cage">Klatka</string>
    <string name="born">Wykocone</string>
    <string name="not_born">Niewykocone\n</string>
    <string name="vaccines_list">Lista szczepionek</string>
    <string name="edit_litter">Edytuj miot</string>
    <string name="edit_rabbit">Edytuj królika</string>
    <string name="edit_mating">Edytuj pokrycie</string>
    <string name="add_vaccine">Dodaj szczepionkę</string>
    <string name="not_archived_label">Niezachiwizowane</string>
    <string name="wait_for_save">Zapisywanie do chmury. Poczekaj kilka sekund i spróbuj ponownie</string>
    <string name="pick_father">Wybierz ojca</string>
    <string name="pick_litter">Wybierz miot</string>
    <string name="pick_mother">Wybierz matkę</string>
    <string name="error_death_date">Data śmierci nie może być wcześniejsza niż urodzenia!</string>
</resources>