<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_rabbit_list"
            android:icon="@drawable/rabbit"
            android:title="@string/rabbits_and_litters" />

        <item
            android:id="@+id/navigation_vaccine_list"
            android:icon="@drawable/syringe"
            android:title="@string/vaccines" />

        <item
            android:id="@+id/navigation_matings"
            android:icon="@drawable/icons8_love_100"
            android:title="@string/matings" />

        <item
            android:id="@+id/navigation_sicknesses"
            android:icon="@drawable/thermometer"
            android:title="@string/sicknesses" />
    </group>

    <group
        android:checkableBehavior="single"
        android:title="@string/settings"
        android:visible="true">

        <item android:enabled="false" />

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

    </group>

</menu>