<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainTab.add.AddRabbitFragment">

    <ImageView
        android:id="@+id/add_rabbit_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/add_rabbit_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_rabbit_name"
        app:layout_constraintTop_toBottomOf="@id/add_rabbit_picture" />

    <EditText
        android:id="@+id/add_rabbit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:inputType="textPersonName"
        android:text="@string/rabbit_placeholder"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_rabbit_name_label"
        app:layout_constraintLeft_toRightOf="@id/add_rabbit_name_label"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/add_rabbit_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/birth_date_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_rabbit_date"
        app:layout_constraintTop_toBottomOf="@id/add_rabbit_name" />


    <!--        todo add default value as today -->
    <EditText
        android:id="@+id/add_rabbit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_rabbit_date_label"
        app:layout_constraintLeft_toRightOf="@id/add_rabbit_date_label"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/add_rabbit_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:selectionRequired="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_rabbit_date_label"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/add_rabbit_gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <com.google.android.material.chip.Chip
            android:id="@+id/add_rabbit_gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:id="@+id/add_rabbit_mother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/mother"
        app:layout_constraintBottom_toTopOf="@id/add_rabbit_mother_fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_rabbit_gender" />

    <FrameLayout
        android:id="@+id/add_rabbit_mother_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@id/add_rabbit_father"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_rabbit_mother" />

    <TextView
        android:id="@+id/add_rabbit_father"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/father"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_rabbit_mother_fragment" />

    <FrameLayout
        android:id="@+id/add_rabbit_father_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:minHeight="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_rabbit_father" />

    <Button
        android:id="@+id/add_rabbit_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_rabbit_father_fragment"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>