<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_rabbit_list">

    <fragment
        android:id="@+id/navigation_rabbit_list"
        android:name="com.example.rabbitapp.ui.mainTab.mainList.MainListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_main_list">
        <action
            android:id="@+id/action_navigation_home_to_addRabbitFragment"
            app:destination="@id/addRabbitFragment" />
        <action
            android:id="@+id/action_navigation_home_to_addLitterFragment"
            app:destination="@id/addLitterFragment" />
        <action
            android:id="@+id/action_navigation_home_to_rabbitDetailsFragment"
            app:destination="@id/rabbitDetailsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_litterDetailsFragment"
            app:destination="@id/litterDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_vaccine_list"
        android:name="com.example.rabbitapp.ui.vaccines.VaccineListFragment"
        android:label="@string/vaccines"
        tools:layout="@layout/fragment_vaccine_list">
        <argument
            android:name="rabbit_id"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="litter_id"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_navigation_vaccine_list_to_vaccineDetailsFragment"
            app:destination="@id/fragment_vaccine_details" />
        <action
            android:id="@+id/action_navigation_vaccine_list_to_vaccineEditFragment"
            app:destination="@id/fragment_vaccine_edit" />
        <action
            android:id="@+id/action_navigation_vaccine_list_to_vaccinateFragment"
            app:destination="@id/fragment_vaccinate" />
    </fragment>

    <fragment
        android:id="@+id/fragment_vaccinate"
        android:name="com.example.rabbitapp.ui.vaccines.VaccinateFragment"
        android:label="@string/vaccinate"
        tools:layout="@layout/fragment_vaccinate">
        <argument
            android:name="rabbit_id"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="litter_id"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="vaccine_id"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_navigation_vaccinate_to_rabbitDetailsFragment"
            app:destination="@id/rabbitDetailsFragment"
            app:popUpTo="@id/rabbitDetailsFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_vaccinate_to_litterDetailsFragment"
            app:destination="@id/litterDetailsFragment"
            app:popUpTo="@id/litterDetailsFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/fragment_vaccine_edit"
        android:name="com.example.rabbitapp.ui.vaccines.VaccineEditFragment"
        android:label="@string/edit_vaccine"
        tools:layout="@layout/fragment_vaccine_edit">
        <argument
            android:name="vaccine_id"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_navigation_vaccine_edit_to_vaccine_list"
            app:destination="@id/navigation_vaccine_list" />
    </fragment>

    <fragment
        android:id="@+id/fragment_vaccine_details"
        android:name="com.example.rabbitapp.ui.vaccines.VaccineFragment"
        android:label="@string/vaccine_details"
        tools:layout="@layout/fragment_vaccine">
        <argument
            android:name="vaccine_id"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_navigation_vaccine_details_to_vaccineEditFragment"
            app:destination="@id/fragment_vaccine_edit" />
        <action
            android:id="@+id/action_navigation_vaccine_details_to_vaccineListFragment"
            app:destination="@id/navigation_vaccine_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.rabbitapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/addRabbitFragment"
        android:name="com.example.rabbitapp.ui.mainTab.add.RabbitAddFragment"
        android:label="@string/add_rabbit"
        tools:layout="@layout/fragment_add_rabbit">
        <action
            android:id="@+id/action_addRabbitFragment_to_navigation_home"
            app:destination="@id/navigation_rabbit_list" />
        <action
            android:id="@+id/action_addRabbitFragment_to_rabbitDetailsFragment"
            app:destination="@id/rabbitDetailsFragment"
            app:popUpTo="@id/navigation_rabbit_list"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_addRabbitFragment_to_pickFatherListFragment"
            app:destination="@id/pickFatherListFragment" />
        <action
            android:id="@+id/action_addRabbitFragment_to_pickMotherListFragment"
            app:destination="@id/pickMotherListFragment" />
    </fragment>
    <fragment
        android:id="@+id/addLitterFragment"
        android:name="com.example.rabbitapp.ui.mainTab.add.LitterAddFragment"
        android:label="@string/add_litter"
        tools:layout="@layout/fragment_add_litter">
        <action
            android:id="@+id/action_addLitterFragment_to_navigation_home"
            app:destination="@id/navigation_rabbit_list" />
        <action
            android:id="@+id/action_addLitterFragment_to_litterDetailsFragment"
            app:destination="@id/litterDetailsFragment"
            app:popUpTo="@id/navigation_rabbit_list"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_addLitterFragment_to_pickMotherListFragment"
            app:destination="@id/pickMotherListFragment" />
        <action
            android:id="@+id/action_addLitterFragment_to_pickFatherListFragment"
            app:destination="@id/pickFatherListFragment" />
    </fragment>
    <fragment
        android:id="@+id/pickFatherListFragment"
        android:name="com.example.rabbitapp.ui.mainTab.parent.PickFatherListFragment"
        android:label="PickFatherListFragment" />
    <fragment
        android:id="@+id/pickMotherListFragment"
        android:name="com.example.rabbitapp.ui.mainTab.parent.PickMotherListFragment"
        android:label="PickMotherListFragment" />
    <fragment
        android:id="@+id/rabbitDetailsFragment"
        android:name="com.example.rabbitapp.ui.mainTab.show.RabbitDetailsFragment"
        android:label="@string/rabbit_details"
        tools:layout="@layout/fragment_rabbit_details">
        <action
            android:id="@+id/action_rabbitDetailsFragment_to_navigation_home"
            app:destination="@id/navigation_rabbit_list" />
        <action
            android:id="@+id/action_rabbitDetailsFragment_to_addRabbitFragment"
            app:destination="@id/addRabbitFragment" />
        <action
            android:id="@+id/action_rabbitDetailsFragment_to_vaccineFragment"
            app:destination="@id/fragment_vaccine_details" />
        <action
            android:id="@+id/action_rabbitDetailsFragment_to_vaccineListFragment"
            app:destination="@id/navigation_vaccine_list" />
    </fragment>
    <fragment
        android:id="@+id/litterDetailsFragment"
        android:name="com.example.rabbitapp.ui.mainTab.show.LitterDetailsFragment"
        android:label="@string/litter_details"
        tools:layout="@layout/fragment_litter_details">
        <action
            android:id="@+id/action_litterDetailsFragment_to_navigation_home"
            app:destination="@id/navigation_rabbit_list" />
        <action
            android:id="@+id/action_litterDetailsFragment_to_addLitterFragment"
            app:destination="@id/addLitterFragment" />
        <action
            android:id="@+id/action_litterDetailsFragment_to_addRabbitFragment"
            app:destination="@id/addRabbitFragment" />
        <action
            android:id="@+id/acton_litterDetailsFragment_to_rabbitDetailsFragment"
            app:destination="@id/rabbitDetailsFragment" />
        <action
            android:id="@+id/action_litterDetailsFragment_to_vaccineListFragment"
            app:destination="@id/navigation_vaccine_list" />
        <action
            android:id="@+id/action_litterDetailsFragment_to_vaccineFragment"
            app:destination="@id/fragment_vaccine_details" />
    </fragment>

</navigation>